--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "node server.js",
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && cp -r src/* App/",
     "preview": "vite preview"
   },
-  "devDependencies": {
-    "vite": "^4.1.0"
-  },
   "dependencies": {
+    "express": "^4.17.1",
     "@dimforge/rapier3d": "^0.11.1",
     "three": "^0.149.0",
     "tweakpane": "^3.1.10",
     "vite-plugin-top-level-await": "^1.3.0",
     "vite-plugin-wasm": "^3.2.1",
     "zustand": "^4.3.3"
+  },
+  "devDependencies": {
+    "vite": "^4.1.0"
   }
 }
