--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "vite",
-    "build": "vite build && cp -r src/* App/",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -20,5 +20,8 @@
   },
   "devDependencies": {
     "vite": "^4.1.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
